--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,7 +55,7 @@ bindsym $mod+q kill
 # bindsym $mod+shift+t exec Thunar
 
 # start rofi (a program launcher)
-bindsym $mod+p exec rofi -show run -hide-scrollbar -regex -sidebar-mode -lines 6 -eh 2 -font "Knack Nerd Font 12" &
+bindsym $mod+p exec rofi -show run -hide-scrollbar -matching regex -sidebar-mode -lines 6 -eh 2 -font "Knack Nerd Font 12" &
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
