--- a/.config/i3/config
+++ b/.config/i3/config
@@ -157,7 +157,7 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace0
 
-assign [class="Chromium-browser|Firefox|qutebrowser"] $workspace0
+assign [class="Chromium-browser|Chromium|Firefox|qutebrowser"] $workspace0
 assign [class="Vim|Emacs|Gnome-terminal|Gnome-terminal-server|URxvt"] $workspace1
 assign [class="TelegramDesktop"] $workspace2
 assign [class="Nautilus"] $workspace3
