--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,7 +75,7 @@ bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
 # maximize current pane
-bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane #{session_name} #D'
+bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
 
 # pane resizing
 bind -r H resize-pane -L 2
@@ -129,8 +129,6 @@ run -b 'tmux bind -ct vi-edit Escape cancel 2> /dev/null || true'
 
 bind Enter copy-mode # enter copy mode
 
-#run -b 'tmux bind -t vi-copy y copy-pipe "xclip -sel clip -i"'
-#run -b 'tmux bind y run-shell "tmux show-buffer | xclip -sel clip -i" \; display-message "Copied tmux buffer to system clipboard"'
 run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
@@ -174,6 +172,8 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # # exit the script if any statement returns a non-true return value
 # set -e
 #
+# export LC_NUMERIC=C
+#
 # __newline='
 # '
 #
@@ -197,11 +197,11 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   current_pane=${2:-$(tmux display -p '#{pane_id}')}
 #
 #   dead_panes=$(tmux list-panes -s -t "$current_session" -F '#{pane_dead} #{pane_id} #{pane_start_command}' | grep -o '^1 %.\+maximized.\+$' || true)
-#   restore=$(echo "$dead_panes" | sed -n -E -e "s/^1 $current_pane .+maximized.+(%[0-9]+)$/tmux swap-pane -s \1 -t $current_pane \; kill-pane -t $current_pane/p" -e "s/^1 (%[0-9]+) .+maximized.+$current_pane$/tmux swap-pane -s \1 -t $current_pane \; kill-pane -t \1/p" )
+#   restore=$(echo "$dead_panes" | sed -n -E -e "s/^1 $current_pane .+maximized.+'(%[0-9]+)'$/tmux swap-pane -s \1 -t $current_pane \; kill-pane -t $current_pane/p" -e "s/^1 (%[0-9]+) .+maximized.+'$current_pane'$/tmux swap-pane -s \1 -t $current_pane \; kill-pane -t \1/p" )
 #
 #   if [ -z "$restore" ]; then
 #     [ "$(tmux list-panes -t "$current_session:" | wc -l | sed 's/^ *//g')" -eq 1 ] && tmux display "Can't maximize with only one pane" && return
-#     window=$(tmux new-window -t "$current_session:" -P "exec maximized... 2> /dev/null & tmux setw -t $current_session: remain-on-exit on; printf 'Pane has been maximized, press <prefix>+ to restore. %s' \\$current_pane")
+#     window=$(tmux new-window -t "$current_session:" -P "exec maximized... 2> /dev/null & tmux setw -t \"$current_session:\" remain-on-exit on; printf \"Pane has been maximized, press <prefix>+ to restore. %s\" '$current_pane'")
 #     window=${window%.*}
 #
 #     guard=10
@@ -213,7 +213,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       tmux display 'Unable to maximize pane'
 #     fi
 #
-#     new_pane=$(tmux display -p '#{pane_id}')
+#     new_pane=$(tmux display -t "$window" -p '#{pane_id}')
 #     tmux setw -t "$window" remain-on-exit off \; swap-pane -s "$current_pane" -t "$new_pane"
 #   else
 #     $restore || tmux kill-pane
@@ -643,11 +643,13 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #     [ -z "$line" ] && continue
 #     left=$(printf '%s' "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
 #     if _is_enabled "$tmux_conf_new_pane_reconnect_ssh"; then
-#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/split-window([^;]+)/run-shell "cut -c3- ~\/\.tmux\.conf | sh -s _split_window #{pane_tty}\1"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/"/\\"/g' -e 's/split-window([^;]+)/run-shell "cut -c3- ~\/\.tmux\.conf | sh -s _split_window #{pane_tty}\1"/g')
 #     else
-#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/run-shell "cut -c3- ~\/\.tmux\.conf \| sh -s _split_window #\{pane_tty\}([^;]+)"/split-window\1/g' -e 's/#\{.+\}/\"&\"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/\\"/"/g' -e 's/run-shell "cut -c3- ~\/\.tmux\.conf \| sh -s _split_window #\{pane_tty\}([^;]+)"/split-window\1/g' -e 's/#\{.+\}/\"&\"/g')
 #     fi
+#     set -x
 #     eval "tmux $left $right" 2>/dev/null || true
+#     set +x
 #   done  << EOF
 # $(tmux list-keys 2>/dev/null | grep -e 'split\(-\|_\)window')
 # EOF
@@ -657,7 +659,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #     [ -z "$line" ] && continue
 #     left=$(printf '%s' "$line" | cut -c-"$column" | sed -E -e 's/[^ \ta-zA-Z0-9,._+@%/-]/\\&/g')
 #     if _is_enabled "$tmux_conf_new_session_prompt"; then
-#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/new-session$/command-prompt -p new-session \"new-session -s %%\"/g')
+#       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }' | sed -E -e 's/new-session$/command-prompt -p new-session \"new-session -s '"'"'%%'"'"'\"/g')
 #     else
 #       right=$(printf '%s' "$line" | cut -c"$column"- | awk -F'\"' 'BEGIN { OFS = FS } { for (i = 1; i <= NF; i+=2) { gsub(/#{.+}/, "\"&\"", $i) } print }'| sed -E -e 's/command-prompt -p new-session[^;]+/new-session/g')
 #     fi
