--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -44,16 +44,17 @@ padding-right = 1
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = Hack:size=8;0
-font-1 = NotoSans-Regular:size=8;0
-font-2 = Unifont:size=5;0
-font-3 = FontAwesome:size=8;0
-font-4 = NotoSans-Regular:size=8;-1
-font-5 = Unifont:size=5;0
-font-6 = Termsynu:size=7;0
-font-7 = fixed:pixelsize=10;0
-font-8 = unifont:size=6:heavy:fontformat=truetype;-2
-font-9 = siji:pixelsize=10;0
+font-0  = "KnackNerdFont:size=8;2"
+font-1  = "Hack:size=8;2"
+font-2  = "NotoSansMonoCJKtc-Regular:size=8;2"
+font-3  = "FontAwesome:size=8;2"
+font-4  = "NotoSans-Regular:size=8;-1"
+font-5  = "Termsynu:size=7;0"
+font-6  = "Unifont:size=5;0"
+font-7  = "fixed:pixelsize=10;0"
+font-8  = "monospace:size=9;2"
+font-9  = "siji:pixelsize=10;0"
+font-10 = "unifont:size=6:heavy:fontformat=truetype;-2"
 
 modules-left = i3
 modules-center =
