--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,10 +31,7 @@ set $mod Mod1
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st
-#bindsym $mod+Return exec alacritty
-#bindsym $mod+Return exec gnome-terminal
-#bindsym $mod+Return exec termite
+bindsym $mod+Return exec bash ~/.config/i3/start-term.sh
 
 # https://github.com/cknadler/vim-anywhere
 bindsym $mod+Shift+v exec ~/.vim-anywhere/bin/run
@@ -160,7 +157,7 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace0
 
 assign [class="Chromium-browser|Chromium|Firefox|qutebrowser"] $workspace0
-assign [class="Vim|Emacs|Gnome-terminal|Gnome-terminal-server|URxvt"] $workspace1
+assign [class="Alacritty|Emacs|Gnome-terminal|Gnome-terminal-server|Gvim|Termite|URxvt|Vim|st-256color"] $workspace1
 assign [class="TelegramDesktop"] $workspace2
 assign [class="Nautilus"] $workspace3
 assign [class="VirtualBox"] $workspace4
