--- a/.config/i3/config
+++ b/.config/i3/config
@@ -159,7 +159,7 @@ bindsym $mod+Shift+0 move container to workspace $workspace0
 assign [class="Chromium-browser|Chromium|Firefox|qutebrowser"] $workspace0
 assign [class="Alacritty|Emacs|Gnome-terminal|Gnome-terminal-server|Gvim|Termite|URxvt|Vim|st-256color"] $workspace1
 assign [class="TelegramDesktop"] $workspace2
-assign [class="Nautilus"] $workspace3
+assign [class="Nautilus|Nemo"] $workspace3
 assign [class="VirtualBox"] $workspace4
 assign [class="Burpsuite*|Wireshark|edb"] $workspace5
 assign [class="Totem|mplayer|mpv|vlc"] $workspace6
