--- a/.config/i3/i3blocks/i3blocks.conf
+++ b/.config/i3/i3blocks/i3blocks.conf
@@ -1,159 +1,67 @@
-# i3blocks config file
-#
-# Please see man i3blocks for a complete reference!
-# The man page is also hosted at http://vivien.github.io/i3blocks
-#
-# List of valid properties:
-#
-# align
-# color
-# command
-# full_text
-# instance
-# interval
-# label
-# min_width
-# name
-# separator
-# separator_block_width
-# short_text
-# signal
-# urgent
-
-# Global properties
-#
-# The top properties below are applied to every block, but can be overridden.
-# Each block command defaults to the script name to avoid boilerplate.
-command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=15
-markup=none
-
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
-[volume]
-label=VOL
-#label=♪
-instance=Master
-#instance=PCM
-interval=once
-signal=10
-#color=#f9a114
-
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
-[memory]
-label=MEM
+[iface]
+color=#ff69b4
+command=/usr/lib/i3blocks/iface
+instance=wlp2s0
+interval=10
+label=
 separator=false
+
+[bandwidth]
+color=#00ffff
+command=/usr/lib/i3blocks/bandwidth
+instance=wlp2s0
 interval=1
-#color=#1ad06e
+label=
+separator=false
+
+[iface]
+color=#ff69b4
+command=/usr/lib/i3blocks/iface
+instance=enp3s0
+interval=10
+label=
+separator=false
+
+[bandwidth]
+color=#00ffff
+command=/usr/lib/i3blocks/bandwidth
+instance=enp3s0
+interval=1
+label=
+separator=false
 
 [memory]
-label=SWAP
-instance=swap
+color=#dfe3ee
+command=/usr/lib/i3blocks/memory
+interval=1
+label=
 separator=false
-interval=1
-#color=#00c3ff
 
-# Disk usage
-#
-# The directory defaults to $HOME if the instance is not specified.
-# The script may be called with a optional argument to set the alert
-# (defaults to 10 for 10%).
-[disk]
-label=HOME
-#instance=/mnt/data
-interval=1
-
-# Network interface monitoring
-#
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-#[iface]
-#instance=wlan0
-#color=#00FF00
-#interval=10
-#separator=false
-
-#[wifi]
-#instance=wlp3s0
-#interval=10
-#separator=false
-
-#[bandwidth]
-#instance=eth0
-#interval=5
-
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
 [cpu_usage]
-label=CPU
+#min_width=CPU:100.00%
+color=#00ff7f
+command=/usr/lib/i3blocks/cpu_usage
 interval=1
-min_width=CPU: 100.00%
-#separator=false
-#color=#f0bfa5
+label=
+separator=false
 
-#[load_average]
-#interval=10
-
-# Battery indicator
-#
-# The battery instance defaults to 0.
-[battery]
-label=BAT
-interval=1
-markup=pango
-#color=#e71ac9
-
-# Date Time
-#
-[time]
-command=date '+%Y/%m/%d %H:%M:%S'
-interval=1
-#color=#c5ffe9
-
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
-
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
+[temperature]
+#color=#8caba8
 #label=TEMP
-#interval=1
+color=#dcedc1
+command=/usr/lib/i3blocks/temperature
+interval=10
+label=
+separator=false
 
-# Key indicators
-#
-# Add the following bindings to i3 config file:
-#
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
+[volume]
+command=/usr/lib/i3blocks/volume
+interval=1
+label=
+separator=false
 
-#[keyindicator]
-#instance=NUM
-#interval=once
-#signal=11
+[time]
+color=#00ff7f
+command= date '+%d/%m/%Y %H:%M:%S'
+interval=1
+label=
