--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,6 @@
 # Configuration for Alacritty, the GPU enhanced terminal emulator
 
+
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty it self.
@@ -27,6 +28,10 @@ padding:
   x: 2
   y: 2
 
+  # Window decorations
+  # Setting this to false will result in window without borders and title bar.
+  decorations: true
+
 # Display tabs using this many cells (changes require restart)
 tabspaces: 4
 
@@ -37,19 +42,19 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: Knack Nerd Font
+    family: Hack Nerd Font
     # Style can be specified to pick a specific face.
     style: Regular
 
   # The bold font face
   bold:
-    family: Knack Nerd Font
+    family: Hack Nerd Font
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: Knack Nerd Font
+    family: Hack Nerd Font
     # Style can be specified to pick a specific face.
     style: Italic
 
@@ -176,6 +181,7 @@ mouse_bindings:
 mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
+  faux_scrollback_lines: 1
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
