--- a/.config/i3/config
+++ b/.config/i3/config
@@ -124,7 +124,7 @@ assign [class="Alacritty|Emacs|Gnome-terminal|Gnome-terminal-server|Gvim|Termite
 assign [class="TelegramDesktop"] $workspace2
 assign [class="Nautilus|Nemo"] $workspace3
 assign [class="VirtualBox"] $workspace4
-assign [class="Burpsuite*|Wireshark|edb"] $workspace5
+assign [class="Burpsuite*|Choregraphe|Wireshark|edb|jetbrains-studio"] $workspace5
 assign [class="Totem|mplayer|mpv|vlc"] $workspace6
 assign [class="Skype"] $workspace7
 assign [class="Steam"] $workspace9
