--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,7 +20,7 @@ new_window 1pixel
 bindsym $mod+q kill
 
 # start rofi (a program launcher)
-bindsym $mod+p exec rofi -show run -hide-scrollbar -matching regex -sidebar-mode -lines 6 -eh 2 -font "Hack Nerd Font Mono 12" &
+bindsym $mod+p exec rofi -modi window,drun,ssh -show drun -show-icons -hide-scrollbar -matching regex -sidebar-mode -lines 6 -eh 2 -font "Hack Nerd Font Mono 12" &
 #bindsym $mod+p exec --no-startup-id i3-dmenu-desktop
 
 # change focus
@@ -260,7 +260,7 @@ bindsym $mod+z exec xrdb ~/.Xresources
 exec --no-startup-id dropbox start
 exec --no-startup-id dropbox-cli start
 exec --no-startup-id wicd -gtk -t
-exec --no-startup-id xset r rate 200 80
+exec --no-startup-id xset r rate 200 120
 exec --no-startup-id ibus-daemon -drx
 exec --no-startup-id bash ~/.config/polybar/launch.sh
 exec --no-startup-id feh --bg-fill ~/Dropbox/useful/config/wallpaper/frame.jpg
