--- a/.config/i3/config
+++ b/.config/i3/config
@@ -248,7 +248,7 @@ bindsym $mod+Shift+v exec ~/.vim-anywhere/bin/run                          # htt
 bindsym $mod+g exec export XDG_CURRENT_DESKTOP=GNOME&&gnome-control-center # start gnome-control-center
 bindsym $mod+p exec rofi -show drun &                                      # start rofi (a program launcher)
 bindsym $mod+shift+Return exec bash ~/.config/i3/i3lock.sh                 # lock screen
-binysym $mod+s exec ~/.scripts/screenshot.sh                               # screenshot
+#bindsym $mod+S exec bash ~/.scripts/screenshot.sh                          # screenshot
 
 # Start up
 #exec --no-startup-id pulseaudio --start
