--- a/.config/i3/config
+++ b/.config/i3/config
@@ -19,11 +19,11 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+## alternatively, you can use the cursor keys:
+#bindsym $mod+Left focus left
+#bindsym $mod+Down focus down
+#bindsym $mod+Up focus up
+#bindsym $mod+Right focus right
 
 # move focused window
 bindsym $mod+Shift+h move left
@@ -31,11 +31,11 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+## alternatively, you can use the cursor keys:
+#bindsym $mod+Shift+Left move left
+#bindsym $mod+Shift+Down move down
+#bindsym $mod+Shift+Up move up
+#bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 bindsym $mod+c split h
@@ -243,12 +243,22 @@ set $urgent-bg-color     #fb4934
 #bindsym $mod+p exec --no-startup-id i3-dmenu-desktop
 #bindsym $mod+u exec scrot
 #bindsym $mod+z exec xrdb ~/.Xresources
-#
-bindsym $mod+Shift+v exec ~/.vim-anywhere/bin/run                          # https://github.com/cknadler/vim-anywhere
+
 bindsym $mod+g exec export XDG_CURRENT_DESKTOP=GNOME&&gnome-control-center # start gnome-control-center
 bindsym $mod+p exec rofi -show drun &                                      # start rofi (a program launcher)
 bindsym $mod+shift+Return exec bash ~/.config/i3/i3lock.sh                 # lock screen
+bindsym $mod+shift+v exec ~/.vim-anywhere/bin/run                          # https://github.com/cknadler/vim-anywhere
+bindsym $mod+w exec bash ~/.config/i3/random_wallpaper.sh                  # change wallpaper randomly
 #bindsym $mod+S exec bash ~/.scripts/screenshot.sh                          # screenshot
+
+#bindsym $mod+Shift+Left move left
+#bindsym $mod+Shift+Right move right
+bindsym $mod+Down exec playerctl play-pause
+bindsym $mod+Left exec playerctl previous
+bindsym $mod+Right exec playerctl next
+bindsym $mod+Shift+Down exec amixer -D pulse sset Master 1%-
+bindsym $mod+Shift+Up exec amixer -D pulse sset Master 1%+
+bindsym $mod+Up exec playerctl play-pause
 
 # Start up
 #exec --no-startup-id pulseaudio --start
