--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -11,8 +11,8 @@ sticker_file       "~/.mpd/sticker.sql"
 # General music daemon options ################################################
 #group                            "nogroup"
 #user                             "nobody"
-#auto_update                      "yes"
-#auto_update_depth                "2048"
+auto_update                       "yes"
+auto_update_depth                 "2048"
 #bind_to_address                  "127.0.0.1"
 #bind_to_address                  "~/.mpd/socket"
 #log_level                        "default"
