--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -5,15 +5,17 @@ mpd_host               = "127.0.0.1"
 mpd_port               = "6600"
 mpd_connection_timeout = "1"
 
-visualizer_color         = "cyan"
+visualizer_color         = cyan, green, yellow, magenta, red
 visualizer_fifo_path     = "/tmp/mpd.fifo"
 visualizer_in_stereo     = "yes"
+#visualizer_look          = ●┃
 #visualizer_look         = "◆▋"
 visualizer_look          = "+|"
 visualizer_output_name   = "my_fifo"
 visualizer_sync_interval = "30"
 visualizer_type          = "wave"
 
+active_window_border               = magenta
 autocenter_mode                    = "yes"
 browser_display_mode               = "columns"
 centered_cursor                    = "yes"
@@ -25,6 +27,7 @@ display_bitrate                    = "yes"
 display_remaining_time             = "yes"
 empty_tag_marker                   = ""
 enable_window_title                = "yes"
+execute_on_song_change             = notify-send "Now Playing ♫" "$(mpc current)"
 external_editor                    = "vim"
 follow_now_playing_lyrics          = "yes"
 header_text_scrolling              = "yes"
@@ -33,15 +36,20 @@ ignore_leading_the                 = "yes"
 incremental_seeking                = "yes"
 jump_to_now_playing_song_at_start  = "yes"
 lines_scrolled                     = "2"
+ncmpcpp_directory                  = ~/.config/ncmpcpp/
+now_playing_prefix                 = "$6"
+now_playing_suffix                 = "$/b$9"
 playlist_disable_highlight_delay   = "0"
 playlist_display_mode              = "columns"
 playlist_show_remaining_time       = "yes"
-progressbar_boldness               = "yes"
-progressbar_look                   =  "=>-"
+progressbar_look                   = "=>-"
 regular_expressions                = "extended"
 search_engine_display_mode         = "columns"
 seek_time                          = "1"
 selected_item_prefix               = "* "
+song_library_format                = {{%a - %t} (%b)}|{%f}
+song_list_format                   = "{{%a - %t}|{%f}}{$R%l}"
+song_status_format                 = "{{%a{ $2//$9 %b{, %y}} $2//$9 }{%t$/b}}|{$b%f$/b}"
 statusbar_visibility               = "yes"
 system_encoding                    = "utf-8"
 titles_visibility                  = "yes"
