--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@
 
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
-set -s escape-time 5                      # faster command sequences
+set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
@@ -140,9 +140,12 @@ run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/nu
 run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
-# copy to Mac OSX clipboard
+# copy to macOS clipboard
+if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
 if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 # copy to X11 clipboard
 if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
@@ -183,7 +186,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   ( ([ x"$1" = x"enabled" ] || [ x"$1" = x"true" ] || [ x"$1" = x"yes" ] || [ x"$1" = x"1" ]) && return 0 ) || return 1
 # }
 #
-# _circled_digit() {
+# _circled() {
 #   circled_digits='⓪ ① ② ③ ④ ⑤ ⑥ ⑦ ⑧ ⑨ ⑩ ⑪ ⑫ ⑬ ⑭ ⑮ ⑯ ⑰ ⑱ ⑲ ⑳'
 #   if [ "$1" -le 20 ] 2>/dev/null; then
 #     i=$(( $1 + 1 ))
@@ -206,12 +209,12 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #     window=$(tmux new-window -t "$current_session:" -P "exec maximized... 2> /dev/null & tmux setw -t \"$current_session:\" remain-on-exit on; printf \"Pane has been maximized, press <prefix>+ to restore. %s\" '$current_pane'")
 #     window=${window%.*}
 #
-#     guard=10
-#     while [ x"$(tmux list-panes -t "$window" -F '#{session_name}:#{window_index} #{pane_dead}' 2>/dev/null)" != x"$window 1" ] && [ "$guard" -ne 0 ]; do
-#       sleep 0.01
-#       guard=$((guard - 1))
+#     retry=10
+#     while [ x"$(tmux list-panes -t "$window" -F '#{session_name}:#{window_index} #{pane_dead}' 2>/dev/null)" != x"$window 1" ] && [ "$retry" -ne 0 ]; do
+#       sleep 0.05
+#       retry=$((retry - 1))
 #     done
-#     if [ "$guard" -eq 0 ]; then
+#     if [ "$retry" -eq 0 ]; then
 #       tmux display 'Unable to maximize pane'
 #     fi
 #
@@ -237,6 +240,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # }
 #
 # _battery() {
+#   count=0
 #   charge=0
 #   uname_s=$(uname -s)
 #   case "$uname_s" in
@@ -254,6 +258,8 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       ;;
 #     *Linux*)
 #       while IFS= read -r batpath; do
+#         grep -i -q device "$batpath/scope" 2> /dev/null && continue
+#
 #         if [ x"$discharging" != x"true" ]; then
 #           discharging=$(grep -qi "discharging" "$batpath/status" && echo "true" || echo "false")
 #         fi
@@ -299,7 +305,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       done
 #       ;;
 #   esac
-#   charge=$(awk -v charge="$charge" -v count="$count" 'BEGIN { print charge / count }')
+#   [ "$count" -ne 0 ] && charge=$(awk -v charge="$charge" -v count="$count" 'BEGIN { print charge / count }')
 #   if [ "$charge" -eq 0 ]; then
 #     tmux  set -ug '@battery_status'  \;\
 #           set -ug '@battery_bar'     \;\
@@ -451,60 +457,91 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #         set -g '@battery_percentage' "$battery_percentage"
 # }
 #
+# _tty_info() {
+#   tty="${1##/dev/}"
+#   uname -s | grep -q "CYGWIN" && cygwin=true
+#
+#   if [ x"$cygwin" = x"true" ]; then
+#     ps -af | tail -n +2 | awk -v tty="$tty" '
+#       ((/ssh/ && !/-W/) || !/ssh/) && $4 == tty {
+#         user[$2] = $1; parent[$2] = $3; child[$3] = $2
+#       }
+#       END {
+#         for (i in user)
+#         {
+#           if (!(i in child) && parent[i] != 1)
+#           {
+#             file = "/proc/" i "/cmdline"; getline command < file; close(file)
+#             gsub(/\0/, " ", command)
+#             print i, user[i], command
+#             exit
+#           }
+#         }
+#       }
+#     '
+#   else
+#     ps -t "$tty" -o user=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -o pid= -o ppid= -o command= | awk '
+#       NR > 1 && ((/ssh/ && !/-W/) || !/ssh/) {
+#         user[$2] = $1; parent[$2] = $3; child[$3] = $2; for (i = 4 ; i <= NF; ++i) command[$2] = i > 4 ? command[$2] FS $i : $i
+#       }
+#       END {
+#         for (i in parent)
+#         {
+#           if (!(i in child) && parent[i] != 1)
+#           {
+#             print i, user[i], command[i]
+#             exit
+#           }
+#         }
+#       }
+#     '
+#   fi
+# }
+#
+# _ssh_or_mosh_args() {
+#   args=$(printf '%s' "$1" | awk '/ssh/ && !/vagrant ssh/ && !/autossh/ && !/-W/ { $1=""; print $0; exit }')
+#   if [ -z "$args" ]; then
+#     args=$(printf '%s' "$1" | grep 'mosh-client' | sed -E -e 's/.*mosh-client -# (.*)\|.*$/\1/' -e 's/-[^ ]*//g' -e 's/\d:\d//g')
+#   fi
+#
+#  printf '%s' "$args"
+# }
+#
 # _username() {
 #   tty=${1:-$(tmux display -p '#{pane_tty}')}
 #   ssh_only=$2
-#   # shellcheck disable=SC2039
-#   if [ x"$OSTYPE" = x"cygwin" ]; then
-#     pid=$(ps -a | awk -v tty="${tty##/dev/}" '$5 == tty && /ssh/ && !/vagrant ssh/ && !/autossh/ && !/-W/ { print $1 }')
-#     [ -n "$pid" ] && ssh_parameters=$(tr '\0' ' ' < "/proc/$pid/cmdline" | sed 's/^ssh //')
-#   else
-#     ssh_parameters=$(ps -t "$tty" -o command= | awk '/ssh/ && !/vagrant ssh/ && !/autossh/ && !/-W/ { $1=""; print $0; exit }')
-#   fi
-#   if [ -n "$ssh_parameters" ]; then
+#
+#   tty_info=$(_tty_info "$tty")
+#   command=$(printf '%s' "$tty_info" | cut -d' ' -f3-)
+#
+#   ssh_or_mosh_args=$(_ssh_or_mosh_args "$command")
+#   if [ -n "$ssh_or_mosh_args" ]; then
 #     # shellcheck disable=SC2086
-#     username=$(ssh -G $ssh_parameters 2>/dev/null | awk 'NR > 2 { exit } ; /^user / { print $2 }')
+#     username=$(ssh -G $ssh_or_mosh_args 2>/dev/null | awk 'NR > 2 { exit } ; /^user / { print $2 }')
 #     # shellcheck disable=SC2086
-#     [ -z "$username" ] && username=$(ssh -T -o ControlPath=none -o ProxyCommand="sh -c 'echo %%username%% %r >&2'" $ssh_parameters 2>&1 | awk '/^%username% / { print $2; exit }')
+#     [ -z "$username" ] && username=$(ssh -T -o ControlPath=none -o ProxyCommand="sh -c 'echo %%username%% %r >&2'" $ssh_or_mosh_args 2>&1 | awk '/^%username% / { print $2; exit }')
 #   else
 #     if ! _is_enabled "$ssh_only"; then
-#       # shellcheck disable=SC2039
-#       if [ x"$OSTYPE" = x"cygwin" ]; then
-#         username=$(whoami)
-#       else
-#         username=$(ps -t "$tty" -o user= -o pid= -o ppid= -o command= | awk '
-#           !/ssh/ { user[$2] = $1; ppid[$3] = 1 }
-#           END {
-#             for (i in user)
-#               if (!(i in ppid))
-#               {
-#                 print user[i]
-#                 exit
-#               }
-#           }
-#         ')
-#       fi
+#       username=$(printf '%s' "$tty_info" | cut -d' ' -f2)
 #     fi
 #   fi
 #
-#   echo "$username"
+#   printf '%s' "$username"
 # }
 #
 # _hostname() {
 #   tty=${1:-$(tmux display -p '#{pane_tty}')}
 #   ssh_only=$2
-#   # shellcheck disable=SC2039
-#   if [ x"$OSTYPE" = x"cygwin" ]; then
-#     pid=$(ps -a | awk -v tty="${tty##/dev/}" '$5 == tty && /ssh/ && !/vagrant ssh/ && !/autossh/ && !/-W/ { print $1 }')
-#     [ -n "$pid" ] && ssh_parameters=$(tr '\0' ' ' < "/proc/$pid/cmdline" | sed 's/^ssh //')
-#   else
-#     ssh_parameters=$(ps -t "$tty" -o command= | awk '/ssh/ && !/vagrant ssh/ && !/autossh/ && !/-W/ { $1=""; print $0; exit }')
-#   fi
-#   if [ -n "$ssh_parameters" ]; then
+#
+#   tty_info=$(_tty_info "$tty")
+#   command=$(printf '%s' "$tty_info" | cut -d' ' -f3-)
+#
+#   ssh_or_mosh_args=$(_ssh_or_mosh_args "$command")
+#   if [ -n "$ssh_or_mosh_args" ]; then
 #     # shellcheck disable=SC2086
-#     hostname=$(ssh -G $ssh_parameters 2>/dev/null | awk 'NR > 2 { exit } ; /^hostname / { print $2 }')
+#     hostname=$(ssh -G $ssh_or_mosh_args 2>/dev/null | awk 'NR > 2 { exit } ; /^hostname / { print $2 }')
 #     # shellcheck disable=SC2086
-#     [ -z "$hostname" ] && hostname=$(ssh -T -o ControlPath=none -o ProxyCommand="sh -c 'echo %%hostname%% %h >&2'" $ssh_parameters 2>&1 | awk '/^%hostname% / { print $2; exit }')
+#     [ -z "$hostname" ] && hostname=$(ssh -T -o ControlPath=none -o ProxyCommand="sh -c 'echo %%hostname%% %h >&2'" $ssh_or_mosh_args 2>&1 | awk '/^%hostname% / { print $2; exit }')
 #     #shellcheck disable=SC1004
 #     hostname=$(echo "$hostname" | awk '\
 #     { \
@@ -519,7 +556,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #     fi
 #   fi
 #
-#   echo "$hostname"
+#   printf '%s' "$hostname"
 # }
 #
 # _root() {
@@ -579,19 +616,22 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # _split_window() {
 #   tty=${1:-$(tmux display -p '#{pane_tty}')}
 #   shift
-#   # shellcheck disable=SC2039
-#   if [ x"$OSTYPE" = x"cygwin" ]; then
-#     pid=$(ps -a | sort -d | awk -v tty="${tty##/dev/}" '$5 == tty && /ssh/ && !/-W/ { print $1; exit 0 }')
-#     [ -n "$pid" ] && ssh=$(tr '\0' ' ' < "/proc/$pid/cmdline")
-#   else
-#     ssh=$(ps -t "$tty" -o command= | sort -d | awk '/ssh/ && !/-W/ { print $0; exit 0 }')
-#   fi
-#   if [ -n "$ssh" ]; then
-#     # shellcheck disable=SC2046
-#     tmux split-window "$@" $(echo "$ssh" | sed -e "s/;/\\\\;/g")
-#   else
-#     tmux split-window "$@"
-#   fi
+#
+#   tty_info=$(_tty_info "$tty")
+#   command=$(printf '%s' "$tty_info" | cut -d' ' -f3-)
+#
+#   case "$command" in
+#     *mosh-client*)
+#       # shellcheck disable=SC2046
+#        tmux split-window "$@" mosh $(echo "$command" | sed -E -e 's/.*mosh-client -# (.*)\|.*$/\1/')
+#      ;;
+#     *ssh*)
+#       # shellcheck disable=SC2046
+#       tmux split-window "$@" $(echo "$command" | sed -e 's/;/\\\\;/g')
+#       ;;
+#     *)
+#       tmux split-window "$@"
+#   esac
 # }
 #
 # _apply_overrides() {
@@ -601,7 +641,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #     screen-*|tmux-*)
 #       ;;
 #     *)
-#       tmux set-option -ga terminal-overrides ",$TERM:Tc"
+#       tmux set-option -ga terminal-overrides ",*256col*:Tc"
 #       ;;
 #   esac
 #   fi
@@ -772,6 +812,17 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #         set -g status-left-style "fg=$tmux_conf_theme_status_fg,bg=$tmux_conf_theme_status_bg,$tmux_conf_theme_status_attr"   \;\
 #         set -g status-right-style "fg=$tmux_conf_theme_status_fg,bg=$tmux_conf_theme_status_bg,$tmux_conf_theme_status_attr"
 #
+#   tmux_conf_theme_terminal_title=${tmux_conf_theme_terminal_title:-'#h ❐ #S ● #I #W'}
+#
+#   tmux_conf_theme_terminal_title=$(echo "$tmux_conf_theme_terminal_title" | sed \
+#     -e 's%#{circled_window_index}%#(cut -c3- ~/.tmux.conf | sh -s _circled #I)%g' \
+#     -e 's%#{circled_session_name}%#(cut -c3- ~/.tmux.conf | sh -s _circled #S)%g' \
+#     -e 's%#{username}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} false #D)%g' \
+#     -e 's%#{hostname}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} false #D)%g' \
+#     -e 's%#{username_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} true #D)%g' \
+#     -e 's%#{hostname_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} true #D)%g')
+#   tmux set -g set-titles-string "$tmux_conf_theme_terminal_title"
+#
 #   tmux_conf_theme_window_status_fg=${tmux_conf_theme_window_status_fg:-'#8a8a8a'} # white
 #   tmux_conf_theme_window_status_bg=${tmux_conf_theme_window_status_bg:-'#080808'} # dark gray
 #   tmux_conf_theme_window_status_attr=${tmux_conf_theme_window_status_attr:-'none'}
@@ -782,13 +833,25 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_theme_window_status_current_attr=${tmux_conf_theme_window_status_current_attr:-'bold'}
 #   tmux_conf_theme_window_status_current_format=${tmux_conf_theme_window_status_current_format:-'#I #W'}
 #   if [ x"$(tmux show -g -v status-justify)" = x"right" ]; then
-#     tmux_conf_theme_window_status_current_format="#[fg=$tmux_conf_theme_window_status_current_bg,bg=$tmux_conf_theme_window_status_bg]$tmux_conf_theme_right_separator_main#[fg=default,bg=default,default] $tmux_conf_theme_window_status_current_format #[fg=$tmux_conf_theme_window_status_bg,bg=$tmux_conf_theme_window_status_current_bg,none]$tmux_conf_theme_right_separator_main"
+#     tmux_conf_theme_window_status_current_format="#[fg=$tmux_conf_theme_window_status_current_bg,bg=$tmux_conf_theme_window_status_bg]$tmux_conf_theme_right_separator_main#[fg=$tmux_conf_theme_window_status_current_fg,bg=$tmux_conf_theme_window_status_current_bg,$tmux_conf_theme_window_status_current_attr] $tmux_conf_theme_window_status_current_format #[fg=$tmux_conf_theme_window_status_bg,bg=$tmux_conf_theme_window_status_current_bg,none]$tmux_conf_theme_right_separator_main"
 #   else
-#     tmux_conf_theme_window_status_current_format="#[fg=$tmux_conf_theme_window_status_bg,bg=$tmux_conf_theme_window_status_current_bg]$tmux_conf_theme_left_separator_main#[fg=default,bg=default,default] $tmux_conf_theme_window_status_current_format #[fg=$tmux_conf_theme_window_status_current_bg,bg=$tmux_conf_theme_status_bg,none]$tmux_conf_theme_left_separator_main"
+#     tmux_conf_theme_window_status_current_format="#[fg=$tmux_conf_theme_window_status_bg,bg=$tmux_conf_theme_window_status_current_bg]$tmux_conf_theme_left_separator_main#[fg=$tmux_conf_theme_window_status_current_fg,bg=$tmux_conf_theme_window_status_current_bg,$tmux_conf_theme_window_status_current_attr] $tmux_conf_theme_window_status_current_format #[fg=$tmux_conf_theme_window_status_current_bg,bg=$tmux_conf_theme_status_bg,none]$tmux_conf_theme_left_separator_main"
 #   fi
 #
-#   tmux_conf_theme_window_status_format=$(echo "$tmux_conf_theme_window_status_format" | sed 's%#{circled_window_index}%#(cut -c3- ~/.tmux.conf | sh -s _circled_digit #I)%g')
-#   tmux_conf_theme_window_status_current_format=$(echo "$tmux_conf_theme_window_status_current_format" | sed 's%#{circled_window_index}%#(cut -c3- ~/.tmux.conf | sh -s _circled_digit #I)%g')
+#   tmux_conf_theme_window_status_format=$(echo "$tmux_conf_theme_window_status_format" | sed \
+#     -e 's%#{circled_window_index}%#(cut -c3- ~/.tmux.conf | sh -s _circled #I)%g' \
+#     -e 's%#{circled_session_name}%#(cut -c3- ~/.tmux.conf | sh -s _circled #S)%g' \
+#     -e 's%#{username}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} false #D)%g' \
+#     -e 's%#{hostname}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} false #D)%g' \
+#     -e 's%#{username_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} true #D)%g' \
+#     -e 's%#{hostname_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} true #D)%g')
+#   tmux_conf_theme_window_status_current_format=$(echo "$tmux_conf_theme_window_status_current_format" | sed \
+#     -e 's%#{circled_window_index}%#(cut -c3- ~/.tmux.conf | sh -s _circled #I)%g' \
+#     -e 's%#{circled_session_name}%#(cut -c3- ~/.tmux.conf | sh -s _circled #S)%g' \
+#     -e 's%#{username}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} false #D)%g' \
+#     -e 's%#{hostname}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} false #D)%g' \
+#     -e 's%#{username_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _username #{pane_tty} true #D)%g' \
+#     -e 's%#{hostname_ssh}%#(cut -c3- ~/.tmux.conf | sh -s _hostname #{pane_tty} true #D)%g')
 #
 #   tmux  setw -g window-status-style "fg=$tmux_conf_theme_window_status_fg,bg=$tmux_conf_theme_window_status_bg,$tmux_conf_theme_window_status_attr" \;\
 #         setw -g window-status-format "$tmux_conf_theme_window_status_format" \;\
@@ -827,6 +890,11 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   tmux_conf_theme_root_bg=${tmux_conf_theme_root_bg:-'none'}
 #   tmux_conf_theme_root_attr=${tmux_conf_theme_root_attr:-'bold,blink'}
 #
+#   tmux_conf_theme_synchronized=${tmux_conf_theme_synchronized:-'🔒'}  # U+1F512
+#   tmux_conf_theme_synchronized_fg=${tmux_conf_theme_synchronized_fg:-'none'}
+#   tmux_conf_theme_synchronized_bg=${tmux_conf_theme_synchronized_bg:-'none'}
+#   tmux_conf_theme_synchronized_attr=${tmux_conf_theme_synchronized_attr:-'none'}
+#
 #   # -- status left style
 #
 #   tmux_conf_theme_status_left=${tmux_conf_theme_status_left-' ❐ #S '}
@@ -842,6 +910,9 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #
 #   tmux_conf_theme_status_left=$(echo "$tmux_conf_theme_status_left" | sed \
 #     -e "s%#{root}%#[fg=$tmux_conf_theme_root_fg]#[bg=$tmux_conf_theme_root_bg]#[$tmux_conf_theme_root_attr]#(cut -c3- ~/.tmux.conf | sh -s _root #{pane_tty} #D)#[inherit]%g")
+#
+#   tmux_conf_theme_status_left=$(echo "$tmux_conf_theme_status_left" | sed \
+#     -e "s%#{synchronized}%#[fg=$tmux_conf_theme_synchronized_fg]#[bg=$tmux_conf_theme_synchronized_bg]#[$tmux_conf_theme_synchronized_attr]#{?pane_synchronized,$tmux_conf_theme_synchronized,}%g")
 #
 #   if [ -n "$tmux_conf_theme_status_left" ]; then
 #     status_left=$(awk \
@@ -926,6 +997,9 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #
 #   tmux_conf_theme_status_right=$(echo "$tmux_conf_theme_status_right" | sed \
 #     -e "s%#{root}%#[fg=$tmux_conf_theme_root_fg]#[bg=$tmux_conf_theme_root_bg]#[$tmux_conf_theme_root_attr]#(cut -c3- ~/.tmux.conf | sh -s _root #{pane_tty} #D)#[inherit]%g")
+#
+#   tmux_conf_theme_status_right=$(echo "$tmux_conf_theme_status_right" | sed \
+#     -e "s%#{synchronized}%#[fg=$tmux_conf_theme_synchronized_fg]#[bg=$tmux_conf_theme_synchronized_bg]#[$tmux_conf_theme_synchronized_attr]#{?pane_synchronized,$tmux_conf_theme_synchronized,}%g")
 #
 #   if [ -n "$tmux_conf_theme_status_right" ]; then
 #     status_right=$(awk \
@@ -1068,8 +1142,8 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #       ;;
 #   esac
 #
-#   status_left=$(echo "$status_left" | sed 's%#{circled_session_name}%#(cut -c3- ~/.tmux.conf | sh -s _circled_digit #S)%g')
-#   status_right=$(echo "$status_right" | sed 's%#{circled_session_name}%#(cut -c3- ~/.tmux.conf | sh -s _circled_digit #S)%g')
+#   status_left=$(echo "$status_left" | sed 's%#{circled_session_name}%#(cut -c3- ~/.tmux.conf | sh -s _circled #S)%g')
+#   status_right=$(echo "$status_right" | sed 's%#{circled_session_name}%#(cut -c3- ~/.tmux.conf | sh -s _circled #S)%g')
 #
 #   tmux  set -g status-left-length 1000 \; set -g status-left "$status_left" \;\
 #         set -g status-right-length 1000 \; set -g status-right "$status_right"
