--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,19 @@
 [Settings]
-gtk-application-prefer-dark-theme=1
-gtk-theme-name=Adapta-Nokto-Eta-Maia
+gtk-application-prefer-dark-theme=0
+gtk-button-images=0
+gtk-cursor-theme-name=Xcursor-breeze
+gtk-enable-event-sounds=0
+gtk-enable-input-feedback-sounds=0
 gtk-fallback-icon-theme=Paper
+gtk-font-name=Hack Nerd Font 11
 gtk-icon-theme-name=Papirus-Dark
-gtk-recent-files-max-age=0
+gtk-menu-images=0
 gtk-recent-files-limit=0
+gtk-recent-files-max-age=0
+gtk-theme-name=Matcha-dark-azul
+gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
