--- a/.config/i3/compton.conf
+++ b/.config/i3/compton.conf
@@ -59,6 +59,11 @@ frame-opacity             = 1;
 inactive-opacity          = 1;
 inactive-opacity-override = false;
 menu-opacity              = 1;
+# flashfocus
+opacity-rule = [
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
+
 
 blur-background         = true;
 blur-background-fixed   = false;
