--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -6,12 +6,20 @@
       "filetypes": ["sh"],
       "ignoredRootPaths": ["~"]
     },
-    "ccls": {
-      "enable": true,
-      "command": "ccls",
-      "filetypes": ["c", "cpp", "objc", "objcpp"],
-      "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
-      "trace.server": "off"
+    "cquery": {
+      "command": "cquery",
+      "args": ["--log-file=/tmp/cq.log"],
+      "filetypes": ["c", "cpp"],
+      "rootPatterns": [
+        "compile_flags.txt",
+        "compile_commands.json",
+        ".vim/",
+        ".git/",
+        ".hg/"
+      ],
+      "initializationOptions": {
+        "cacheDirectory": "/tmp/cquery"
+      }
     },
     "golang": {
       "command": "gopls",
