--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,12 +2,12 @@
 
 #: Fonts {{{
 
-font_family      FiraCode Nerd Font Mono
-bold_font        FiraCode Nerd Font Mono bold
-italic_font      FiraCode Nerd Font Mono italic
-bold_italic_font FiraCode Nerd Font Mono bold italic
+font_family      FiraCode Nerd Font
+bold_font        FiraCode Nerd Font bold
+italic_font      FiraCode Nerd Font italic
+bold_italic_font FiraCode Nerd Font bold italic
 
-font_size 10.0
+font_size 11.0
 
 adjust_line_height 0
 adjust_column_width 0
@@ -235,8 +235,8 @@ background #1d2021
 
 #: The foreground and background colors
 
-# background_opacity         1.0
-# dynamic_background_opacity no
+background_opacity         0.9
+dynamic_background_opacity no
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -254,7 +254,7 @@ background #1d2021
 #: change transparency of windows set dynamic_background_opacity to
 #: yes (this is off by default as it has a performance cost)
 
-# dim_opacity 0.75
+dim_opacity 0.9
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
